<resources>
    <string name="app_name">Calculator by Barış Çetin</string>
    <string name="calcText">12345678</string>
    <string name="btnEqual">=</string>
    <string name="btnZero">0</string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    <string name="btnMultiply">x</string>
    <string name="btnSubtract">-</string>
    <string name="btnSum">+</string>
    <string name="btnDivide">/</string>

</resources>