<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnClear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/softGray"
        android:gravity="bottom|end"
        android:padding="10dp"
        android:textColor="@color/eerieBlack"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/softGray"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="@string/btnSeven"
            android:textSize="20sp"
            android:textColor="@color/eerieBlack"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/softGray"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="@string/btnEight"
            android:textColor="@color/eerieBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/softGray"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="@string/btnNine"
            android:textColor="@color/eerieBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/oranj"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="@string/btnDivide"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/softGray"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="@string/btnFour"
            android:textSize="20sp"
            android:textColor="@color/eerieBlack"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/softGray"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="@string/btnFive"
            android:textColor="@color/eerieBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/softGray"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:textColor="@color/eerieBlack"
            android:onClick="append"
            android:text="@string/btnSix"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/oranj"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="@string/btnMultiply"
            android:textColor="@color/softGray"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:onClick="append"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/softGray"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="@string/btnOne"
            android:textSize="20sp"
            android:textColor="@color/eerieBlack"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/softGray"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:textColor="@color/eerieBlack"
            android:onClick="append"
            android:text="@string/btnTwo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:textColor="@color/eerieBlack"
            android:backgroundTint="@color/softGray"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="@string/btnThree"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/oranj"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="@string/btnSubtract"
            android:textColor="@color/softGray"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/softGray"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="@string/btnZero"
            android:textColor="@color/eerieBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/softGray"
            android:minWidth="0dp"
            android:textColor="@color/eerieBlack"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="."
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPercentage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/oranj"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="append"
            android:text="%"
            android:textColor="@color/softGray"
            android:textSize="25sp"

            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/oranj"
            android:onClick="append"
            android:text="@string/btnSum"
            android:textColor="@color/softGray"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="0dp"
        android:paddingVertical="0dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:backgroundTint="@color/oranj"
            android:onClick="append"
            android:text="CLR"
            android:textColor="@color/softGray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:backgroundTint="@color/oranj"
            android:padding="0dp"
            android:onClick="append"
            android:text="@string/btnEqual"
            android:textColor="@color/softGray"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>